apps/api/kubernetes/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
  namespace: prd
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ${DOCKER_IMAGE}
          ports:
            - name: api
              containerPort: 80
