apps/api/kubernetes/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: prd
  labels:
    service: api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    app: api
