apps/api/kubernetes/ingress-tls.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: prd
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
    traefik.ingress.kubernetes.io/router.middlewares: prd-authelia-auth-middleware@kubernetescrd
spec:
  rules:
    - host: ${DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: api-svc
                port:
                  number: 80
  tls:
    - hosts:
        - ${DOMAIN}
      secretName: cert
